
  * Improved library update. Now more faster.
  * Added Play/Enqueue options to Last.fm panel items
  * Playlist current track now follow theme color
  * Last.fm preferences shouldn't be enabled if the user or pass ir not
    filled
  * Mouse wheel support in the volumen control window
  * Create ~/.guayadeque/LinkIcons dir if doesnt exists to store the
    Links Icons

2009-06-09 0.1.0
  * Now if Next Track is clicked at the last track in playlist and Play Random 
    is enabled it will add a new random track to the playlist
  * Fixed bug in some listbox that made the context menu to appear twice
  * Fixed a bug when dragging tracks in the playlist and the list were
    scrolled down.
  * The Links now have names. So you can have multiple links with same host.
    Edit the names in Preferences->Links
  * Added Edit Labels Option to Playlist tracks
  * Added the year to the player information
  * Added the links also to the library panel context menu
  * The year is shown in the albums list box
  * Added two options to play or enqueue all tracks in the songs list box
  * Now from the label editor can be added or deleted the labels too
  * Fixed a bug when Start Minimized was enabled and not the TaskBar icon
  * Implemented the option to add a random track if the playlist is empty
  * Fixed bug in manual cover downloader when the results where below 10
  * The order of radiostations preference is saved
  * Added an option to allow albums be ordered by Year
  * Now the database has version for future updates.
  * If covers are updated it will be changed in database. If you had older version
    you need to delete the old database ~/.guayadeque/guayadeque.db
  * Now can be updated only the selected RadioGenres and not all as before.
  * Added support for Multimedia Keys (Play,Pause,Stop,Next,Prev)
  * Fixed a bug when searching text in radio panel introduced in v0.0.3
  * Fixed a bug when pulsed random with only one track in playlist